check_PROGRAMS = \
    basic-function-calls \
    fork \
    registers

TESTS = \
    basic-function-calls.check \
    fork.check \
    registers.check

CFLAGS_CHRONICLE_TESTS = -g -O0

basic_function_calls_CFLAGS = $(CFLAGS_CHRONICLE_TESTS)
fork_CFLAGS = $(CFLAGS_CHRONICLE_TESTS)
registers_CFLAGS = $(CFLAGS_CHRONICLE_TESTS)

